n-modal v1.2.1 z-index fix

--- a/n-features/modal/style.css
+++ b/n-features/modal/style.css
@@ -2,7 +2,7 @@
 
 /* #region n-modal */
 .n-modal {
-	width: 100vw;
+	width: calc(100vw - (100vw - 100%));
 	height: 100vh;
 	position: fixed;
 	top: 0;
@@ -10,17 +10,16 @@
 	display: none;
 	justify-content: center;
 	align-items: center;
+	z-index: 100;
 }	
 .n-modal__backdrop {
 	height: 100%;
 	width: 100%;
 	background-color: rgba(0,0,0,0.4);
-	z-index: 100;
 }
 
 .n-modal__content {
     position: absolute;
-    z-index: 101;
 }
 .n-modal__opened {
 	display: flex;
